fixed font layout shift test

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,4 +5,5 @@
 /* removes highlight of button press on mobile */
 body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    font-display: optional;
 }
